# gaia-level1-agent

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
src/: agent.py  settings.py  tools.py  ui.py  util.py  utils.py
