[project]
name = "agents-course-final"
version = "0.1.0"
description = "vandenn's Agents Course Final Output in HuggingFace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "gradio[oauth]>=5.34.1",
    "pandas>=2.3.0",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.4",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
